cabecalho-de-media-query-adicionado

--- a/src/styles/CarrersSection.module.css
+++ b/src/styles/CarrersSection.module.css
@@ -39,3 +39,9 @@
   width: 100%;
   gap: 30px;
 }
+
+@media screen and (min-width: 768px) {
+  .containersection {
+    background-color: green;
+  }
+}
