--- a/src/styles/Cards.module.css
+++ b/src/styles/Cards.module.css
@@ -1,48 +1,49 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 
-    width: 100%;
-    height: 147px;
+  width: 100%;
+  height: auto;
 
-    border-radius: 20px;
-    border: 1px solid white;
+  border-radius: 20px;
+  border: 1px solid white;
 
-    transition: .2s;
+  transition: 0.2s;
+
+  padding: 20px 0px;
 }
-.container:hover{
-    cursor: pointer;
-    background-color: rgb(167, 96, 221);
-    border: none;
-    box-shadow: 5px 10px 10px #000;
+.container:hover {
+  cursor: pointer;
+  background-color: #281c80;
+
+  /* border: none; */
+  box-shadow: 5px 5px 5px #71717118;
 }
 
-.carrerstitle{
-    color: white;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 23.44px;
-    background-color: inherit;
+.carrerstitle {
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
+    }
 }
 
 @media screen and (min-width: 768px) {
-    
-    
-    .container{
-        display: flex;
-        justify-content: center;
-        width: 85%;
-        height: 32vh;
-        gap: 7vh;
-        padding: 1vh;
-    }
+  .container {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    padding: 30px 0px;
+  }
 
-    .carrerstitle{
+  .carrerstitle {
     display: flex;
     justify-content: center;
     align-items: center;
-    }
+  }
 }
