--- a/src/styles/MainSection.module.css
+++ b/src/styles/MainSection.module.css
@@ -19,6 +19,8 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+
+  padding: 0px 20px;
 }
 
 .MainSection h1 {
@@ -91,5 +93,9 @@
     font-size: 33px;
     width: 200px;
     height: 60px;
+  }
+
+  .textContainer {
+    padding: 0px 20px;
   }
 }
