--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -8,6 +8,8 @@
     padding: 10px 10px;
 
     background-color: black;
+
+    border-bottom: #FFFFFF 0.5px solid;
 }
 
 .menuOpen{
@@ -43,3 +45,18 @@
         right: 10px;
     }
 }
+
+.desktopMenu {
+    list-style: none;
+    display: flex;
+    gap: 40px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .desktopMenu li {
+    color: white;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 300;
+  }
