fix: fix cards on material section

--- a/src/styles/MainSection.module.css
+++ b/src/styles/MainSection.module.css
@@ -24,14 +24,14 @@
 }
 
 .MainSection h1 {
-  font-size: 3em;
+  font-size: 35px;
   font-weight: 500;
   line-height: 50px;
 }
 
 .MainSection h5 {
   line-height: 25px;
-  font-size: 1.7em;
+  font-size: 20px;
   font-weight: 200;
 }
 
